language/move-lang/tests/move_check/expansion/restricted_constant_names.exp
error: 

   ┌── tests/move_check/expansion/restricted_constant_names.move:5:11 ───
   │
 5 │     const address: u64 = 0;
   │           ^^^^^^^ Invalid constant name 'address'. Constant names must start with 'A'..'Z'
   │

error: 

   ┌── tests/move_check/expansion/restricted_constant_names.move:6:11 ───
   │
 6 │     const signer: u64 = 0;
   │           ^^^^^^ Invalid constant name 'signer'. Constant names must start with 'A'..'Z'
   │

error: 

   ┌── tests/move_check/expansion/restricted_constant_names.move:7:11 ───
   │
 7 │     const u8: u64 = 0;
   │           ^^ Invalid constant name 'u8'. Constant names must start with 'A'..'Z'
   │

error: 

   ┌── tests/move_check/expansion/restricted_constant_names.move:8:11 ───
   │
 8 │     const u64: u64 = 0;
   │           ^^^ Invalid constant name 'u64'. Constant names must start with 'A'..'Z'
   │

error: 

   ┌── tests/move_check/expansion/restricted_constant_names.move:9:11 ───
   │
 9 │     const u128: u64 = 0;
   │           ^^^^ Invalid constant name 'u128'. Constant names must start with 'A'..'Z'
   │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:10:11 ───
    │
 10 │     const vector: u64 = 0;
    │           ^^^^^^ Invalid constant name 'vector'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:11:11 ───
    │
 11 │     const move_to: u64 = 0;
    │           ^^^^^^^ Invalid constant name 'move_to'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:12:11 ───
    │
 12 │     const move_from: u64 = 0;
    │           ^^^^^^^^^ Invalid constant name 'move_from'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:13:11 ───
    │
 13 │     const borrow_global: u64 = 0;
    │           ^^^^^^^^^^^^^ Invalid constant name 'borrow_global'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:14:11 ───
    │
 14 │     const borrow_global_mut: u64 = 0;
    │           ^^^^^^^^^^^^^^^^^ Invalid constant name 'borrow_global_mut'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:15:11 ───
    │
 15 │     const exists: u64 = 0;
    │           ^^^^^^ Invalid constant name 'exists'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:16:11 ───
    │
 16 │     const freeze: u64 = 0;
    │           ^^^^^^ Invalid constant name 'freeze'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:17:11 ───
    │
 17 │     const assert: u64 = 0;
    │           ^^^^^^ Invalid constant name 'assert'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:19:11 ───
    │
 19 │     const Self: u64 = 0;
    │           ^^^^ Invalid constant name 'Self'. 'Self' is restricted and cannot be used to name a constant
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:26:11 ───
    │
 26 │     const address: u64 = 0;
    │           ^^^^^^^ Invalid constant name 'address'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:27:11 ───
    │
 27 │     const signer: u64 = 0;
    │           ^^^^^^ Invalid constant name 'signer'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:28:11 ───
    │
 28 │     const u8: u64 = 0;
    │           ^^ Invalid constant name 'u8'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:29:11 ───
    │
 29 │     const u64: u64 = 0;
    │           ^^^ Invalid constant name 'u64'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:30:11 ───
    │
 30 │     const u128: u64 = 0;
    │           ^^^^ Invalid constant name 'u128'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:31:11 ───
    │
 31 │     const vector: u64 = 0;
    │           ^^^^^^ Invalid constant name 'vector'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:32:11 ───
    │
 32 │     const move_to: u64 = 0;
    │           ^^^^^^^ Invalid constant name 'move_to'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:33:11 ───
    │
 33 │     const move_from: u64 = 0;
    │           ^^^^^^^^^ Invalid constant name 'move_from'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:34:11 ───
    │
 34 │     const borrow_global: u64 = 0;
    │           ^^^^^^^^^^^^^ Invalid constant name 'borrow_global'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:35:11 ───
    │
 35 │     const borrow_global_mut: u64 = 0;
    │           ^^^^^^^^^^^^^^^^^ Invalid constant name 'borrow_global_mut'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:36:11 ───
    │
 36 │     const exists: u64 = 0;
    │           ^^^^^^ Invalid constant name 'exists'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:37:11 ───
    │
 37 │     const freeze: u64 = 0;
    │           ^^^^^^ Invalid constant name 'freeze'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:38:11 ───
    │
 38 │     const assert: u64 = 0;
    │           ^^^^^^ Invalid constant name 'assert'. Constant names must start with 'A'..'Z'
    │

error: 

    ┌── tests/move_check/expansion/restricted_constant_names.move:40:11 ───
    │
 40 │     const Self: u64 = 0;
    │           ^^^^ Invalid constant name 'Self'. 'Self' is restricted and cannot be used to name a constant
    │

